test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_types/conflicting_function_declarations.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[26]:
  int
  identifier(f)
  (
  int
  identifier(arr)
  [
  const int(2)
  ]
  [
  const int(3)
  ]
  )
  ;
  int
  identifier(f)
  (
  int
  identifier(arr)
  [
  const int(2)
  ]
  [
  const int(4)
  ]
  )
  ;
